force-app/main/default/objects/Pacient__c/Pacient__c.object-meta.xml
<CustomObject>
    <label>Pacient</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Pacient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pacients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>