force-app/main/default/objects/Pacient__c/fields/Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit__c</fullName>
    <label>Last Visit</label>
    <required>true</required>
    <type>Date</type>
</CustomField>