force-app/main/default/objects/Pacient__c/fields/Next_Visit__c.field-meta.xml
<CustomField>
    <fullName>Next_Visit__c</fullName>
    <label>Next Visit</label>
    <type>Date</type>
</CustomField>