force-app/main/default/objects/Pacient__c/fields/professional__c.field-meta.xml
<CustomField>
    <fullName>professional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>professional</label>
    <referenceTo>professional__c</referenceTo>
    <relationshipLabel>Pacients</relationshipLabel>
    <relationshipName>Pacients</relationshipName>
    <type>Lookup</type>
</CustomField>